--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -260,7 +260,7 @@
 
     <div class="footer">
         <p>&copy; 2025 Parking Tracker | Find the best parking spots in your area</p>
-        <p>Real-time parking availability updates every 10 minutes</p>
+        <p>Real-time parking availability updates every 30 seconds</p>
     </div>
 </div>
 </body>
